--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -38,11 +38,14 @@ a {
 }
 
 a.message-button {
-    border: 2px solid #333;
-    border-radius: 5px;
-    padding: 20px;
-  }
-  
+  border: 2px solid #333;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 0 0 10px green;
+  border-color: rgb(0, 0, 0);
+  border-style: solid;
+  transition: all 0.3s ease;
+}
 
 a:hover {
   background-color: #333;
