--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -14,7 +14,7 @@
 
     <h2>Search Results</h2>
     <ul>
-      <% searchResults.forEach(function(result) { %> <% var isFriend =
+      <% (searchResults || []).forEach(function(result) { %> <% var isFriend =
       friends.some(friend => friend.id === result.id); %> <% var hasRequest =
       requests.some(request => request.id === result.id); %>
       <li>
