--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -13,10 +13,19 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  width: 100%;
   height: calc(100vh - 50px);
-  margin-top: 50px;
+  margin-top: 0;
+  padding-top: 20px;
+  box-sizing: border-box;
+}
+
+.welcome-message {
+  margin-bottom: 15px;
+  align-self: flex;
+  text-align: center;
+  padding-left: 20px;
 }
 
 h1 {
@@ -113,7 +122,6 @@ a:hover {
 }
 
 /* Logout button styles */
-/* Logout button styles */
 .nav-button {
   padding: 10px;
   color: #fff;
@@ -124,4 +132,84 @@ a:hover {
 
 .nav-button:hover {
   background-color: #333;
+}
+
+.activity-section td a {
+  color: blue;
+  text-decoration: none;
+}
+
+.activity-section td a:hover {
+  background-color: transparent;
+  color: blue;
+  text-decoration: underline;
+}
+
+.renewal-sections {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.renewal-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 28%;
+  margin: 0 2%;
+}
+
+.renewal-container h2 {
+  margin-bottom: 5px;
+}
+
+.renewal-box {
+  width: 300px;
+  height: 400px;
+  border: 2px solid #333;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  margin-bottom: 20px;
+}
+
+.activity-section {
+  width: 60%;
+  margin: 2px auto;
+}
+
+.activity-section h2 {
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.activity-section table {
+  width: 100%;
+  font-size: 12px;
+  border-collapse: collapse;
+  border: 2px solid #333; /* add border property */
+}
+
+.activity-section th,
+.activity-section td {
+  padding: 2px 2px;
+  text-align: left;
+  border: 1px solid #333;
+  line-height: 1.2;
+}
+
+.activity-section th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+  width: 2px;
+}
+
+
+.table-wrapper {
+  height: calc(3 * (2.2em + 12px) + (2.2em + 12px) + 1px); /* Fits 3 rows and table header (based on the line-height, padding, and border values in your CSS) */
+  overflow-y: auto;
+  display: inline-block;
+  width: 100%;
+  border:rgb(0, 0, 0);
 }
