Added nav bar to all pages + about us and FAQ

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -2,11 +2,26 @@
 <html>
 
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Messages</title>
   <link rel="stylesheet" href="/css/messages.css" />
 </head>
 
 <body>
+  <!-- Navigation bar -->
+  <nav class="nav-bar">
+    <div class="dropdown">
+      <div class="dropdown-content">
+        <a href="/dashboard" class="nav-button">Home</a>
+        <a href="/account" class="nav-button">Account</a>
+        <a href="/friends" class="nav-button">Friends</a>
+        <a href="/logout" class="nav-button">Sign out</a>
+        <a href="/about" class="nav-button">About us</a>
+        <a href="/FAQ" class="nav-button">FAQ</a>
+      </div>
+    </div>
+  </nav>
   <div class="content-wrapper">
     <div class="lists-container">
       <div class="tabs">
