--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard</title>
   <link rel="stylesheet" href="css/dashboard.css" />
 </head>
@@ -12,9 +13,12 @@
   <nav class="nav-bar">
     <div class="dropdown">
       <div class="dropdown-content">
+        <a href="/dashboard" class="nav-button">Home</a>
         <a href="/account" class="nav-button">Account</a>
         <a href="/friends" class="nav-button">Friends</a>
         <a href="/logout" class="nav-button">Sign out</a>
+        <a href="/about" class="nav-button">About us</a>
+        <a href="/FAQ" class="nav-button">FAQ</a>
       </div>
     </div>
   </nav>
