--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -4,8 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friends</title>
+    <link rel="stylesheet" href="/css/friends.css" />
   </head>
   <body>
+    <!-- Navigation bar -->
+  <nav class="nav-bar">
+    <div class="dropdown">
+      <div class="dropdown-content">
+        <a href="/dashboard" class="nav-button">Home</a>
+        <a href="/account" class="nav-button">Account</a>
+        <a href="/friends" class="nav-button">Friends</a>
+        <a href="/logout" class="nav-button">Sign out</a>
+        <a href="/about" class="nav-button">About us</a>
+        <a href="/FAQ" class="nav-button">FAQ</a>
+      </div>
+    </div>
+  </nav>
     <h1>Friends</h1>
     <form action="/friends/search" method="post">
       <input type="text" name="query" placeholder="Search for users" />
@@ -67,6 +81,6 @@
       <li><%= friend.username %></li>
       <% }) %>
     </ul>
-    <a href="/login">Back to dashboard</a>
+    <a href="/dashboard">Back to dashboard</a>
   </body>
 </html>
