Added messages to toolbar and added to messages page + improved content-wrapper css

--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -14,9 +14,10 @@
         <a href="/dashboard" class="nav-button">Home</a>
         <a href="/account" class="nav-button">Account</a>
         <a href="/friends" class="nav-button">Friends</a>
-        <a href="/logout" class="nav-button">Sign out</a>
+        <a href="/messages" class="nav-button">Messages</a>
         <a href="/about" class="nav-button">About us</a>
         <a href="/FAQ" class="nav-button">FAQ</a>
+        <a href="/logout" class="nav-button">Sign out</a>
       </div>
     </div>
   </nav>
