--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -1,3 +1,107 @@
+/* Navigation bar styles */
+.nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  z-index: 1;
+}
+
+/* Dropdown menu styles */
+.dropdown {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgb(21, 114, 28), rgb(44, 172, 53));
+  overflow: hidden;
+  transition: all 0.3s ease;
+}
+
+.dropdown.active {
+  width: calc(100% - 200px);
+}
+
+.dropdown-content {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.dropdown-content a {
+  display: block;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.dropdown-content a:hover {
+  background-color: #333;
+}
+
+/* Black bar styles */
+.black-bar {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+/* Logout button styles */
+.nav-button {
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  margin-top: 10px;
+}
+
+.nav-button:hover {
+  background-color: #333;
+}
+h1 {
+  margin-bottom: 30px;
+  font-family: Arial, sans-serif;
+}
+
+a {
+  display: inline-block;
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  text-align: center;
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 20px;
+  transition: all 0.3s ease;
+}
+
+a.message-button {
+  border: 2px solid #333;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 0 0 10px green;
+  border-color: rgb(0, 0, 0);
+  border-style: solid;
+  transition: all 0.3s ease;
+}
+
+a:hover {
+  background-color: #333;
+  color: white;
+}
+
 .message-container {
   height: 90vh;
   width: 110vh;
@@ -29,6 +133,7 @@
 .content-wrapper {
   display: flex;
   flex-direction: row;
+  margin-top: 60px;
 }
 
 .lists-container {
