--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -19,6 +19,7 @@
                     <a href="/account" class="nav-button">Account</a>
                     <a href="/friends" class="nav-button">Friends</a>
                     <a href="/messages" class="nav-button">Messages</a>
+                    <a href="/renewal" class="nav-button">Renewals</a>
                     <a href="/about" class="nav-button">About us</a>
                     <a href="/FAQ" class="nav-button">FAQ</a>
                     <a href="/logout" class="nav-button">Sign out</a>
