--- a/public/css/account.css
+++ b/public/css/account.css
@@ -138,17 +138,19 @@ body {
     padding: 0;
   }
   
-  /* Logout button styles */
   .nav-button {
     padding: 10px;
     color: #fff;
     text-decoration: none;
     transition: all 0.3s ease;
     margin-top: 10px;
+    line-height: 50px;
   }
   
+  
   .nav-button:hover {
-    background-color: #333;
+    background-color: #333333;
+    padding: 0 30px;
   }
 
   .account-details {
