--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -36,24 +36,22 @@ h1 {
 a {
   display: inline-block;
   font-family: Arial, sans-serif;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
   color: #333;
   text-decoration: none;
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 20px;
-  transition: all 0.3s ease;
 }
 
 a.message-button {
   border: 2px solid #333;
   border-radius: 5px;
-  padding: 20px;
+  padding: 10px;
   box-shadow: 0 0 0 10px green;
   border-color: rgb(0, 0, 0);
   border-style: solid;
-  transition: all 0.3s ease;
 }
 
 a:hover {
@@ -120,18 +118,21 @@ a:hover {
   padding: 0;
 }
 
-/* Logout button styles */
 .nav-button {
   padding: 10px;
   color: #fff;
   text-decoration: none;
   transition: all 0.3s ease;
   margin-top: 10px;
+  line-height: 50px;
 }
 
+
 .nav-button:hover {
-  background-color: #333;
+  background-color: #333333;
+  padding: 0 30px;
 }
+
 
 .activity-section td a {
   color: blue;
