--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup Page</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/signup.css" />
     <script>
       function showSuccessMessage() {
         if (window.confirm("Account created successfully. Please log in.")) {
