--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -14,6 +14,15 @@ h3 {
   font-family: Arial, sans-serif;
 }
 
+.unread-count {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 5px;
+  font-size: 0.8em;
+  margin-left: 5px;
+}
+
 /* Dropdown menu styles */
 .dropdown {
   position: absolute;
@@ -112,7 +121,7 @@ a:hover {
 
 .message-container {
   height: 90vh;
-  width: 110vh;
+  width: 100vh;
   overflow-y: scroll;
   padding: 10px;
   background-color: #f9f9f9;
@@ -131,7 +140,7 @@ a:hover {
 }
 
 .search-input {
-  width: auto;
+  width: 94%;
   padding: 8px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -145,7 +154,7 @@ a:hover {
 }
 
 .lists-container {
-  width: auto;
+  width: 17%;
   display: flex;
   flex-direction: column;
   margin-right: 10px;
