--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -119,8 +119,22 @@ a:hover {
   color: white;
 }
 
+.chat-wrapper {
+  position: relative;
+}
+
+.chat-heading {
+  position: sticky;
+  top: 50px;
+  background-color: #fff;
+  padding: 5px;
+  z-index: 10;
+  border: 5px solid #ccc;
+  border-radius: 5px;
+}
+
 .message-container {
-  height: 90vh;
+  height: 75vh;
   width: 100vh;
   overflow-y: scroll;
   padding: 10px;
@@ -128,7 +142,6 @@ a:hover {
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-bottom: 10px;
-  position: relative;
 }
 
 .list-box {
