Added unread notification for every page with a nav bar

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,21 +11,7 @@
 <body>
 
     <body>
-        <!-- Navigation bar -->
-        <nav class="nav-bar">
-            <div class="dropdown">
-                <div class="dropdown-content">
-                    <a href="/dashboard" class="nav-button">Home</a>
-                    <a href="/account" class="nav-button">Account</a>
-                    <a href="/friends" class="nav-button">Friends</a>
-                    <a href="/messages" class="nav-button">Messages</a>
-                    <a href="/renewal" class="nav-button">Renewals</a>
-                    <a href="/about" class="nav-button">About us</a>
-                    <a href="/FAQ" class="nav-button">FAQ</a>
-                    <a href="/logout" class="nav-button">Sign out</a>
-                </div>
-            </div>
-        </nav>
+        <%- include('./partials/navbar') %>
         <h1 class="welcome-message">About Us</h1>
         <p>Welcome to our About Us page. Here you can learn more about our team and our mission.</p>
     </body>
