--- a/public/css/account.css
+++ b/public/css/account.css
@@ -1,3 +1,5 @@
+@import url('navbar.css');
+
 body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -72,7 +74,6 @@ body {
     padding: 20px;
     box-sizing: border-box;
   }
-  
 
   a:hover {
     background-color: #333;
