--- a/views/account.ejs
+++ b/views/account.ejs
@@ -9,21 +9,7 @@
 </head>
 
 <body>
-  <!-- Navigation bar -->
-  <nav class="nav-bar">
-    <div class="dropdown">
-      <div class="dropdown-content">
-        <a href="/dashboard" class="nav-button">Home</a>
-        <a href="/account" class="nav-button">Account</a>
-        <a href="/friends" class="nav-button">Friends</a>
-        <a href="/messages" class="nav-button">Messages</a>
-        <a href="/renewal" class="nav-button">Renewals</a>
-        <a href="/about" class="nav-button">About us</a>
-        <a href="/FAQ" class="nav-button">FAQ</a>
-        <a href="/logout" class="nav-button">Sign out</a>
-      </div>
-    </div>
-  </nav>
+  <%- include('./partials/navbar') %>
 
   <main>
     <h1 class="welcome-message">Account Details</h1>
@@ -57,7 +43,7 @@
 
 
             <button type="submit" class="btn btn-success btn-rectangle">Save Changes</button>
-            <button type="button" onclick="location.href='/account'"
+            <button type="submit" onclick="location.href='/account'"
               class="btn btn-danger btn-rectangle">Cancel</button>
           </form>
 
@@ -70,7 +56,7 @@
             </p>
             <p>Role: <%= user.role %>
             </p>
-            <button type="button" onclick="location.href='/account?editing=true'"
+            <button type="submit" onclick="location.href='/account?editing=true'"
               class="edit-account-button btn-rectangle">Edit Account</button>
             <form method="POST" action="/delete-account"
               onsubmit="return confirm('Are you sure you want to delete your account? This action cannot be undone.')">
@@ -79,7 +65,6 @@
             <% } %>
     </div>
   </main>
-
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
