--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,21 +9,7 @@
 </head>
 
 <body>
-  <!-- Navigation bar -->
-  <nav class="nav-bar">
-    <div class="dropdown">
-      <div class="dropdown-content">
-        <a href="/dashboard" class="nav-button">Home</a>
-        <a href="/account" class="nav-button">Account</a>
-        <a href="/friends" class="nav-button">Friends</a>
-        <a href="/messages" class="nav-button">Messages</a>
-        <a href="/renewal" class="nav-button">Renewals</a>
-        <a href="/about" class="nav-button">About us</a>
-        <a href="/FAQ" class="nav-button">FAQ</a>
-        <a href="/logout" class="nav-button">Sign out</a>
-      </div>
-    </div>
-  </nav>
+  <%- include('./partials/navbar') %>
 
   <!-- Main content -->
   <main>
