--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -132,6 +132,20 @@ a:hover {
   border-radius: 5px;
 }
 
+.list-box {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  max-height: 300px; 
+  overflow-y: auto;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: row;
+  margin-top: 60px;
+}
+
 .message-container {
   height: 75vh;
   width: 100vh;
@@ -143,12 +157,17 @@ a:hover {
   margin-bottom: 10px;
 }
 
-.list-box {
+.data-container {
+  position: fixed;
+  top: 60px;
+  right: 0;
+  width: 30%;
+  height: 90vh;
+  overflow-y: scroll;
+  padding: 10px;
+  background-color: #f9f9f9;
   border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 10px;
-  max-height: 300px; 
-  overflow-y: auto;
 }
 
 .search-input {
@@ -239,11 +258,6 @@ a:hover {
 
 .hidden {
   display: none;
-}
-
-
-.data-container {
-  width: auto;
 }
 
 .file-name {
