--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,6 +6,46 @@ body {
   padding: 0;
 }
 
+button {
+  margin-right: 10px;
+}
+.form-container {
+  position: relative;
+  text-align: center;
+}
+.error-message {
+  display: inline-block;
+  color: red;
+  border: 1px solid red;
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 1px;
+  margin-bottom: 20px;
+}
+.logo {
+  display: block;
+  margin: 50px auto;
+  width: 150px;
+  height: 150px;
+  background-image: url("/images/frogPrince.avif");
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid black;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+.title {
+  font-family: 'Nordique Inline', sans-serif;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  border: 2px solid #333;
+  padding: 10px;
+  width: 30%;
+  margin-bottom: 10px;
+}
+
 /* Form styling */
 form {
   max-width: 500px;
